exports[`test renders input field 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "black",
        "borderBottomWidth": 1,
      },
      Object {
        "marginLeft": 10,
        "marginRight": 10,
      },
      undefined,
      Object {
        "flexDirection": "row",
      },
    ]
  }>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    style={
      Array [
        Object {
          "backgroundColor": "white",
        },
        Object {
          "height": 40,
          "width": 400,
        },
        undefined,
        Object {
          "flex": -1,
          "textAlign": "left",
          "textAlignVertical": "top",
        },
      ]
    }
    underlineColorAndroid="transparent" />
</View>
`;

exports[`test renders input field with set width and height 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "black",
        "borderBottomWidth": 1,
      },
      Object {
        "marginLeft": 10,
        "marginRight": 10,
      },
      undefined,
      Object {
        "flexDirection": "row",
      },
    ]
  }>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    style={
      Array [
        Object {
          "backgroundColor": "white",
        },
        Object {
          "height": 20,
          "width": 100,
        },
        undefined,
        Object {
          "flex": -1,
          "textAlign": "left",
          "textAlignVertical": "top",
        },
      ]
    }
    underlineColorAndroid="transparent" />
</View>
`;
